2011-09-19  Leo Liu  <sdl.web@gmail.com>

	* replace.el (occur-revert-arguments): Make it permanent-local.
	(occur-mode): Don't call font-lock-defontify.

2011-09-19  Chong Yidong  <cyd@stupidchicken.com>

	* net/ldap.el (ldap-search-internal): Don't push empty search
	result (Bug#9508).

2011-09-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* whitespace.el (whitespace-newline-mode): Disable it right (bug#9550).

2011-09-19  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-inline-compress-commands): Add "xz".
	Suggested by Liam Stitt <stittl@cuug.ab.ca>.

2011-09-18  Juri Linkov  <juri@jurta.org>

	* buff-menu.el (Buffer-menu-mode-map):
	* dired.el (dired-mode-map):
	* emacs-lisp/lisp-mode.el (emacs-lisp-mode-map)
	(lisp-interaction-mode-map):
	* emacs-lisp/package.el (package-menu-mode-map):
	* epa.el (epa-key-list-mode-map):
	* menu-bar.el (menu-bar-showhide-tool-bar-menu)
	(menu-bar-options-menu):
	* outline.el (outline-mode-menu-bar-map):
	* vc/vc-bzr.el (vc-bzr-shelve-menu-map, vc-bzr-extra-menu-map):
	* vc/vc-dir.el (vc-dir-menu-map):
	* vc/vc-git.el (vc-git-stash-menu-map, vc-git-extra-menu-map):
	Capitalize non-function content words in menu item strings.

	* dired.el (dired-mode-map): Add menu item for
	`image-dired-dired-toggle-marked-thumbs'.

2011-09-18  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-edit-string): Bind `isearch-new-case-fold'
	to `isearch-case-fold-search' and restore its original value
	after the `isearch-mode' call.

2011-09-18  Juri Linkov  <juri@jurta.org>

	* progmodes/grep.el (grep-process-setup): Don't check code for 1
	because `zgrep' returns 1 for successful matches (bug#9226).

2011-09-18  Juri Linkov  <juri@jurta.org>

	* info.el (Info-extract-menu-node-name): Check the second match
	for empty string (second test-case of bug#9528).
	(Info-last-preorder): Let-bind `Info-history' to nil to not add
	intermediate nodes to the history (first test-case of bug#9528).
