@@ -1,3 +1,9 @@
+2011-09-19  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* ps-mule.el (ps-mule-plot-string): Don't inf-loop (bug#5108).
+	* image-mode.el (image-toggle-display-text)
+	(image-toggle-display-image): Stay away from evil `intangible'.
+
 2011-09-19  Leo Liu  <sdl.web@gmail.com>
 
 	* replace.el (occur-revert-arguments): Make it permanent-local.
